--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "pinia": "^2.0.11",
     "quasar": "^2.6.0",
     "vue": "^3.0.0",
-    "vue-router": "^4.0.0"
+    "vue-router": "^4.0.0",
+    "vue3-charts": "^1.1.33"
   },
   "devDependencies": {
     "@quasar/app-vite": "^1.3.0",
